uniform regex validations except dates

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -70,8 +70,8 @@
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
     "    # columns below validated for non-blank samples only\n",
     "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
-    "    validate_float('DECIMAL_LATITUDE', df[~is_blank])\n",
-    "    validate_float('DECIMAL_LONGITUDE', df[~is_blank])\n",
+    "    validate_regex('DECIMAL_LATITUDE', df[~is_blank])\n",
+    "    validate_regex('DECIMAL_LONGITUDE', df[~is_blank])\n",
     "    # COLLECTION_COUNTRY, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
     "    validate_country_and_coordinates(df[~is_blank], fn, na_values=[''])\n",
     "    # COLLECTION_LOCATION not checked\n",
@@ -84,8 +84,8 @@
     "    validate_freetext('IDENTIFIED_HOW', df[~is_blank])\n",
     "    validate_values('LIFESTAGE', df[~is_blank], valid_dict)\n",
     "    validate_values('SEX', df[~is_blank], valid_dict, na_values = [''])\n",
-    "    validate_time('TIME_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
-    "    validate_time_period('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    validate_regex('TIME_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    validate_regex('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
     "    validate_values('OUTDOORS_INDOORS', df[~is_blank], valid_dict, na_values = [''])\n",
     "    validate_freetext('DESCRIPTION_OF_COLLECTION_METHOD', df[~is_blank])\n",
@@ -97,16 +97,16 @@
     "    validate_freetext('HABITAT', df)\n",
     "    date_pres = validate_date('DATE_OF_PRESERVATION', df, na_values=['']) # allow for empty values unlike DATE_OF_COLLECTION\n",
     "    compare_dates(before=date_coll, after=date_pres)\n",
-    "    validate_float('ELEVATION', df, na_values=[''])\n",
-    "    validate_wtw('WHAT_3_WORDS', df[~is_blank], na_values=[''])\n",
+    "    validate_regex('ELEVATION', df, na_values=[''])\n",
+    "    validate_regex('WHAT_3_WORDS', df[~is_blank], na_values=[''])\n",
     "    validate_freetext('OTHER_ORGANISMS', df)\n",
     "    validate_freetext('BIOASSAYS', df)\n",
     "    validate_freetext('COLLECTOR_SAMPLE_ID', df)\n",
     "    validate_freetext('OTHER_INFORMATION', df)\n",
     "    validate_freetext('MISC_METADATA', df)\n",
     "    validate_freetext('DNA_EXTRACTION_DESCRIPTION', df)\n",
-    "    validate_float('DNA_EXTRACT_VOLUME_PROVIDED', df, na_values=[''])\n",
-    "    validate_float('DNA_EXTRACT_CONCENTRATION', df, na_values=[''])\n",
+    "    validate_regex('DNA_EXTRACT_VOLUME_PROVIDED', df, na_values=[''])\n",
+    "    validate_regex('DNA_EXTRACT_CONCENTRATION', df, na_values=[''])\n",
     "            \n",
     "    logging.warning('# ended validate_anospp_partner_manifest_v.{}'.format(ANOSPP_VERSION))\n",
     "\n",
