--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -27,9 +27,9 @@
     "\n",
     "    setup_logging(verbose=verbose)\n",
     "\n",
-    "    logging.warning(f'# partner manifest validation v.{VALIDATION_VERSION}')\n",
-    "    logging.warning(f'# validating BIOSCAN manifest v.{BIOSCAN_VERSION}')\n",
-    "    logging.warning(f'# manifest {fn}')\n",
+    "    logging.info(f'# partner manifest validation v.{VALIDATION_VERSION}')\n",
+    "    logging.info(f'# validating BIOSCAN manifest v.{BIOSCAN_VERSION}')\n",
+    "    logging.info(f'# manifest {fn}')\n",
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
@@ -49,7 +49,7 @@
     "    contrib_df = validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
     "\n",
     "    # orange cols\n",
-    "    validate_catch_lot('CATCH_LOT', df, na_values=[''])\n",
+    "    validate_regex('CATCH_LOT', df, na_values=[])\n",
     "    df, gal = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
     "    # check and exclude blanks\n",
     "    is_blank = check_blanks(df)\n",
@@ -60,17 +60,17 @@
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
     "    # columns below validated for non-blank samples only\n",
     "    validate_values('BOTTLE_DIRECTION', df[~is_blank], valid_dict) # TODO allow for blank in non-Malaise trap samples\n",
-    "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
-    "    validate_float('DECIMAL_LATITUDE', df[~is_blank])\n",
-    "    validate_float('DECIMAL_LONGITUDE', df[~is_blank])\n",
+    "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED'])\n",
+    "    validate_regex('DECIMAL_LATITUDE', df[~is_blank], na_values=[])\n",
+    "    validate_regex('DECIMAL_LONGITUDE', df[~is_blank], na_values=[])\n",
     "    # COUNTRY_OF_COLLECTION, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
     "    validate_country_and_coordinates(df[~is_blank], fn, na_values=[''], bioscan=True)\n",
     "    # COLLECTION_LOCATION not checked\n",
     "    \n",
     "    # purple cols - valiated for non-blank samples\n",
-    "    validate_wtw('WHAT_3_WORDS', df[~is_blank], na_values=[''])\n",
-    "    validate_time('TIME_OF_COLLECTION', df[~is_blank], bioscan=True)\n",
-    "    validate_time_period('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED'])\n",
+    "    validate_regex('WHAT_3_WORDS', df[~is_blank], na_values=[''])\n",
+    "    validate_regex('TIME_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    validate_regex('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
     "    date_plat = validate_date('DATE_OF_PLATING', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    compare_dates(before=date_coll, after=date_plat)\n",
@@ -92,7 +92,7 @@
     "    # TODO check if STS will need something here\n",
     "    validate_freetext('COLLECTOR_SAMPLE_ID', df)\n",
     "    validate_freetext('VOUCHER_ID', df)\n",
-    "    validate_float('ELEVATION', df, na_values=[''])\n",
+    "    validate_regex('ELEVATION', df, na_values=[''])\n",
     "    validate_freetext('OTHER_INFORMATION', df)\n",
     "    validate_freetext('MISC_METADATA', df)\n",
     "    # IDENTIFIED_BY not checked\n",
@@ -103,7 +103,7 @@
     "    if write_sts:\n",
     "        write_sts_manifest(df, fn, VALIDATION_VERSION)\n",
     "        \n",
-    "    logging.warning('# ended validate_bioscan_partner_manifest_v.{}'.format(BIOSCAN_VERSION))\n",
+    "    logging.info('# ended validate_bioscan_partner_manifest_v.{}'.format(BIOSCAN_VERSION))\n",
     "\n",
     "    return df"
    ]
@@ -134,23 +134,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a030e1bb",
+   "metadata": {},
+   "source": [
+    "## Validation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6b170f12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230712_js_batch1/[NENM]_[2307]_BIOSCAN_Manifest_V2.0.xlsx'\n",
+    "fn = '../results/20230728_js_batch2/[NENM]_[2307]_BIOSCAN_Manifest_V2.0.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43a0cf51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
