--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -146,7 +146,7 @@
     "def index_ranges(df):\n",
     "    \n",
     "    # based on https://stackoverflow.com/questions/4628333/converting-a-list-of-integers-into-range-in-python\n",
-    "    i = df.index.to_list()\n",
+    "    i = df.index.astype(int).to_list()\n",
     "    ranges = []\n",
     "    for a, b in itertools.groupby(enumerate(i), lambda pair: pair[1] - pair[0]):\n",
     "        b = list(b)\n",
@@ -315,9 +315,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_catch_lot(col, df, na_values=[]):\n",
+    "def validate_regex(col, df, na_values=[]):\n",
     "    \n",
-    "    logging.debug(f'validating catch lot format in {col} column')\n",
+    "    logging.debug(f'validating data format in {col} column')\n",
     "    \n",
     "    if col not in df.columns:\n",
     "        logging.error(f'{col} column not found in manifest')\n",
@@ -325,13 +325,36 @@
     "    series = df[col]\n",
     "    series = exclude_missing(series, na_values)\n",
     "    \n",
-    "    regex = '^C\\d{3}[A-Z]$'\n",
+    "    regexs = {\n",
+    "        'CATCH_LOT': (r'^C\\d{3}[A-Z]$', \n",
+    "                      'like C123A'),\n",
+    "        'DECIMAL_LATITUDE': (r'^[-+]?([0-8]\\d|\\d)(\\.\\d+)?$', \n",
+    "                             'between -90 and 90'),\n",
+    "        'DECIMAL_LONGITUDE': (r'^[-+]?(1[0-7]\\d|\\d\\d|\\d)(\\.\\d+)?$', \n",
+    "                              'between -180 and 180'),\n",
+    "        'WHAT_3_WORDS': (r'^///[a-z]+\\.[a-z]+\\.[a-z]+$', \n",
+    "                         'like ///one.two.three'),\n",
+    "        'TIME_OF_COLLECTION': (r'^(?:[01]\\d|2[0-3]):[0-5]\\d$|^(?:[01]\\d|2[0-3]):[0-5]\\d:[0-5]\\d$', \n",
+    "                              'in HH:MM format'),\n",
+    "        'DURATION_OF_COLLECTION': (r'^P(?:\\d+Y)?(?:\\d+M)?(?:\\d+D)?(?:T(?:\\d+H)?(?:\\d+M)?(?:\\d+S)?)?$', \n",
+    "                                   'in P[n]Y[n]M[n]DT[n]H[n]M[n]S format'),\n",
+    "        'ELEVATION': (r'^[-+]?\\d*\\.?\\d+$', 'only a number (in metres)'),\n",
+    "        'DNA_EXTRACT_VOLUME_PROVIDED': (r'^[-+]?\\d*\\.?\\d+$', 'a number (in microlitres)'),\n",
+    "        'DNA_EXTRACT_CONCENTRATION': (r'^[-+]?\\d*\\.?\\d+$', 'a number (in nanograms per microlitre)')\n",
+    "    }\n",
     "    \n",
-    "    is_valid_catch_lot = series.str.match(regex)\n",
-    "    if not is_valid_catch_lot.all():\n",
-    "        offending_values = series[~is_valid_catch_lot].unique()\n",
-    "        s = index_ranges(series[~is_valid_catch_lot])\n",
-    "        logging.error(f'{col} format incorrect for SERIES {s}: found {offending_values} - expected to be like C123A')\n",
+    "\n",
+    "    \n",
+    "    is_valid_regex = series.str.match(regexs[col][0])\n",
+    "    if not is_valid_regex.all():\n",
+    "        offending_values = series[~is_valid_regex].unique()\n",
+    "        s = index_ranges(series[~is_valid_regex])\n",
+    "        msg = (f'{col} format incorrect for SERIES {s}: found {offending_values} - '\n",
+    "              f'expected to be {regexs[col][1]}')\n",
+    "        if col == 'CATCH_LOT':\n",
+    "            logging.warning(msg)\n",
+    "        else:\n",
+    "            logging.error(msg)\n",
     "        "
    ]
   },
@@ -374,7 +397,7 @@
     "        selected_partner_df = partners_df.query(f'partner_code == \"{selected_partner_code}\"')\n",
     "        if selected_partner_df.shape[0] == 0:\n",
     "            logging.error(f'partner code {selected_partner_code} not found in {bioscan_partners_fn}, '\n",
-    "                          f'using \"Sanger Institute\" as default option')\n",
+    "                          f'using \"Sanger Institute\" as default partner')\n",
     "            gal = \"Sanger Institute\"\n",
     "        else:\n",
     "            gal = selected_partner_df['gal'].iloc[0]\n",
@@ -477,7 +500,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO - which columns require NA, do not remove blanks to be able to get taxids for all\n",
     "def check_blanks(df):\n",
     "    \n",
     "    logging.debug('checking and excluding blank samples based on ORGANISM_PART being NOT_APPLICABLE')    \n",
@@ -653,117 +675,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_wtw(col, df, na_values=[]):\n",
-    "    \n",
-    "    logging.debug(f'validating what3words format in {col} column')\n",
-    "    \n",
-    "    if col not in df.columns:\n",
-    "        logging.error(f'{col} column not found in manifest')\n",
-    "        return\n",
-    "    series = df[col]\n",
-    "    series = exclude_missing(series, na_values)\n",
-    "    \n",
-    "    valid_wtw_series = series.str.match('///[a-z]+\\.[a-z]+\\.[a-z]+')\n",
-    "    \n",
-    "    if not valid_wtw_series.all():\n",
-    "        invalid_wtw_series = series[~valid_wtw_series]\n",
-    "        logging.error(f'invalid what3words format in {col}, SERIES {index_ranges(invalid_wtw_series)}: '\n",
-    "                      f'{invalid_wtw_series.unique()} - expected to be like \"///one.two.three\"')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def validate_time(col, df, na_values=[], bioscan=False):\n",
-    "    \n",
-    "    # TODO harmonise code with hooks implementation (regex)\n",
-    "    \n",
-    "    logging.debug(f'validating time format in {col} column')\n",
-    "    \n",
-    "    if col not in df.columns:\n",
-    "        logging.error(f'{col} column not found in manifest')\n",
-    "        return\n",
-    "    series = df[col]\n",
-    "    series = exclude_missing(series, na_values)\n",
-    "        \n",
-    "    # invalid time formats\n",
-    "    # bioscan sheet format yields HH:MM:SS instead of HH:MM\n",
-    "    time_format = '%H:%M:%S' if bioscan else '%H:%M'\n",
-    "    # NB empty string converted to NaT\n",
-    "    time_series = pd.to_datetime(series, format=time_format, errors='coerce')\n",
-    "    if time_series.isna().any():\n",
-    "        logging.error(\n",
-    "            f'invalid time format in {col} column, SERIES {index_ranges(time_series[time_series.isna()])}: '\n",
-    "            f'{series[time_series.isna()].unique()} - expected HH:MM'\n",
-    "        )\n",
-    "    valid_time_series = time_series[~time_series.isna()]\n",
-    "    \n",
-    "    return valid_time_series\n",
-    "\n",
-    "# validate_time('TIME_OF_COLLECTION', df, na_values=[''])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def validate_time_period(col, df, na_values=[]):\n",
-    "    \n",
-    "    logging.debug(f'validating time period format in {col} column')\n",
-    "    \n",
-    "    if col not in df.columns:\n",
-    "        logging.error(f'{col} column not found in manifest')\n",
-    "        return\n",
-    "    series = df[col]\n",
-    "    series = exclude_missing(series, na_values)\n",
-    "\n",
-    "    # conversion with modifications for proper parsing \n",
-    "    # by pd.Timedelta (does not accept missing data, e.g. 'PT1H')\n",
-    "    # note - will not work for weeks and months\n",
-    "    def convert_iso_duration(s):\n",
-    "        if s == np.nan:\n",
-    "            return np.nan\n",
-    "        if not s.startswith('P') or 'T' not in s:\n",
-    "            return np.nan\n",
-    "        # add days\n",
-    "        if s.startswith('PT'):\n",
-    "            s = s.replace('PT','P0DT')\n",
-    "        # add trailing minutes and seconds\n",
-    "        if s.endswith('H'):\n",
-    "            s += '0M0S'\n",
-    "        elif s.endswith('M'):\n",
-    "            s += '0S'\n",
-    "        try:\n",
-    "            return pd.Timedelta(s)\n",
-    "        except:\n",
-    "            return np.nan\n",
-    "    time_period_series = series.apply(convert_iso_duration)\n",
-    "    if time_period_series.isna().any():\n",
-    "        logging.error(\n",
-    "            f'invalid time period format in {col} column, '\n",
-    "            f'SERIES {index_ranges(time_period_series[time_period_series.isna()])}: '\n",
-    "            f'{series[time_period_series.isna()].unique()}'\n",
-    "        )\n",
-    "    valid_time_period_series = time_period_series[~time_period_series.isna()]\n",
-    "    return valid_time_period_series\n",
-    "\n",
-    "# df.loc[1,'DURATION_OF_COLLECTION'] = 'PVT1H'\n",
-    "# validate_time_period('DURATION_OF_COLLECTION', df, na_values=['']);\n",
-    "# df['DURATION_OF_COLLECTION']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO include tests\n",
     "def validate_country_and_coordinates(df, fn, na_values=[], bioscan=False):\n",
     "    \n",
     "    logging.debug('validating COUNTRY_OF_COLLECTION against DECIMAL_LATITUDE and DECIMAL_LONGITUDE')\n",
@@ -1108,36 +1019,6 @@
     "                      f'SPECIMEN_IDENTITY_RISK values should be blank or \"Y\", not \"N\"')\n",
     "\n",
     "# validate_specimen_id_risk(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def validate_float(col, df, na_values=[]):\n",
-    "    \n",
-    "    logging.debug(f'validating float number format in {col} column')\n",
-    "    \n",
-    "    if col not in df.columns:\n",
-    "        logging.error(f'{col} column not found in manifest')\n",
-    "        return\n",
-    "    series = df[col]\n",
-    "    series = exclude_missing(series, na_values)\n",
-    "    \n",
-    "    for val in series.unique():\n",
-    "        try:\n",
-    "            float(val)\n",
-    "        except:\n",
-    "            s = index_ranges(df.query(f'{col} == \"{val}\"'))\n",
-    "            logging.error(\n",
-    "                f'{col} column, SERIES {s}: '\n",
-    "                f'found non-numeric value \"{val}\"'\n",
-    "            )\n",
-    "            \n",
-    "            \n",
-    "# validate_float('ELEVATION', df, na_values=[''])"
    ]
   },
   {
