prepare for v3 added columns and 1-2 blanks options

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -33,6 +33,8 @@
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
+    "    # check manifest verison\n",
+    "    v = infer_bioscan_version(df)\n",
     "    # check series, exclude non-numeric\n",
     "    df = validate_series(df)\n",
     "    # clean up data\n",
@@ -99,7 +101,7 @@
     "    # IDENTIFIER_AFFILIATION not checked\n",
     "    \n",
     "    df = expand_plate_only(df)\n",
-    "    df = add_sts_cols(df, contrib_df, gal)\n",
+    "    df = add_sts_cols(df, contrib_df, gal, v)\n",
     "    if write_sts:\n",
     "        write_sts_manifest(df, fn, VALIDATION_VERSION)\n",
     "        \n",
@@ -151,6 +153,38 @@
     "fn = '../results/20230728_js_batch2/[NENM]_[2307]_BIOSCAN_Manifest_V2.0.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0820e7eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blank_wells = {\n",
+    "    'PLATE_ONLY':('H12'), # v2\n",
+    "    'PLATE_ONLY_1_BLANK':('H12'), # v3\n",
+    "    'PLATE_ONLY_1_BLANK':('G12','H12'), # v3\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc8349a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['TUBE_OR_WELL_ID'].isin(blank_wells.keys()).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "120b09e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
