--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -108,6 +108,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def infer_bioscan_version(df):\n",
+    "    \n",
+    "    logging.debug(f'inferring bioscan version from data format')\n",
+    "    \n",
+    "    version_evidence = {}\n",
+    "    \n",
+    "    for col in ('CATCH_SOLUTION', 'AMOUNT_OF_CATCH_PLATED'):\n",
+    "        if col in df.columns:\n",
+    "            version_evidence[col] = 'v3'\n",
+    "        else:\n",
+    "            version_evidence[col] = 'v2'\n",
+    "            \n",
+    "    v3_plate_only = (('PLATE_ONLY_1_BLANK' in df['TUBE_OR_WELL_ID']) \n",
+    "                     or ('PLATE_ONLY_2_BLANKS' in df['TUBE_OR_WELL_ID']))\n",
+    "    if 'PLATE_ONLY' in df['TUBE_OR_WELL_ID']:\n",
+    "        if v3_plate_only:\n",
+    "            logging.error('found both bioscan v2 and v3 style PLATE_ONLY entries in manifest')\n",
+    "            raise ValueError('fix bioscan manifest version before proceeding')\n",
+    "        else:\n",
+    "            version_evidence['PLATE_ONLY'] = 'v2'\n",
+    "    elif v3_plate_only:\n",
+    "        version_evidence['PLATE_ONLY'] = 'v3'\n",
+    "        \n",
+    "    if len(set(version_evidence.values())) > 1:\n",
+    "        msg = 'found conflicting evidence on bioscan version: '\n",
+    "        for k, v in version_evidence.items():\n",
+    "            msg += f'{k} suggests {v}, '\n",
+    "        logging.error(msg[:-2])\n",
+    "        raise ValueError('fix bioscan manifest version before proceeding')\n",
+    "        \n",
+    "    # returns only if all evidence is concordant\n",
+    "    v = version_evidence['CATCH_SOLUTION']\n",
+    "    logging.info(f'bioscan manifest {v} inferred')\n",
+    "    \n",
+    "    return v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def validate_series(df):\n",
     "    \n",
     "    # series should be 1,2, ..., nsamples\n",
@@ -458,28 +501,38 @@
     "    col_id = range(1,13)\n",
     "    expected_wells = [r + str(c) for (c,r) in itertools.product(col_id, row_id)]\n",
     "    \n",
-    "    if (df[well_col] == 'PLATE_ONLY').any():\n",
+    "    blank_wells = {\n",
+    "        'PLATE_ONLY':['H12'], # v2\n",
+    "        'PLATE_ONLY_1_BLANK':['H12'], # v3\n",
+    "        'PLATE_ONLY_2_BLANKS':['G12','H12'], # v3\n",
+    "    }\n",
+    "    \n",
+    "    if df[well_col].isin(blank_wells.keys()).any():\n",
     "        pdfs = []\n",
     "\n",
     "        for plate, pdf in df.groupby(plate_col):\n",
     "            # If plate level only metadata is being entered\n",
     "            # put “PLATE_ONLY” in well \n",
     "            # and use only one row to capture the metadata for the whole plate\n",
-    "            if (pdf[well_col] == 'PLATE_ONLY').any():\n",
-    "                logging.info(f'found PLATE_ONLY plate {plate}, expanding to 96 well rows')\n",
+    "            if pdf[well_col].isin(blank_wells.keys()).any():\n",
+    "                \n",
     "                if pdf.shape[0] > 1:\n",
     "                    logging.error(f'expected one row in PLATE_ONLY plate {plate}, found {pdf.shape[0]} - '\n",
     "                                  f'extracting metadata from first row only')\n",
+    "                plate_only_val = pdf[well_col].iloc[0]\n",
+    "                logging.info(f'found {plate_only_val} plate {plate}, expanding to 96 well rows, '\n",
+    "                             f'keeping {\", \".join(blank_wells[plate_only_val])} blank')\n",
     "                # expand to 96 rows\n",
     "                pdf = pd.DataFrame(pdf.iloc[0] for i in range(len(expected_wells)))\n",
     "                pdf[well_col] = expected_wells\n",
-    "                # H12 blank\n",
-    "                for col in pdf.columns:\n",
-    "                    if col == 'ORGANISM_PART':\n",
-    "                        pdf[col].iloc[-1]='NOT_APPLICABLE'\n",
-    "                    elif col not in ['SERIES','CATCH_LOT','RACK_OR_PLATE_ID',\n",
-    "                                     'TUBE_OR_WELL_ID','ORGANISM_PART','PRESERVATIVE_SOLUTION']:\n",
-    "                        pdf[col].iloc[-1]=''\n",
+    "                \n",
+    "                for blank_well in blank_wells[plate_only_val]:\n",
+    "                    for col in pdf.columns:\n",
+    "                        if col == 'ORGANISM_PART':\n",
+    "                            pdf.query(f'{well_col} == \"{blank_well}\"')[col] = 'NOT_APPLICABLE'\n",
+    "                        elif col not in ['SERIES','CATCH_LOT','RACK_OR_PLATE_ID',\n",
+    "                                         'TUBE_OR_WELL_ID','ORGANISM_PART','PRESERVATIVE_SOLUTION']:\n",
+    "                            pdf.query(f'{well_col} == \"{blank_well}\"')[col] = ''\n",
     "            pdfs.append(pdf)\n",
     "            \n",
     "        df = pd.concat(pdfs).reset_index(drop=True)\n",
@@ -1054,7 +1107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_sts_cols(df, contrib_df, gal, bioscan=True):\n",
+    "def add_sts_cols(df, contrib_df, gal, v, bioscan=True):\n",
     "    \n",
     "    is_blank = (df['ORGANISM_PART'] == 'NOT_APPLICABLE')\n",
     "    \n",
@@ -1070,13 +1123,19 @@
     "    df['SYMBIONT'] = 'TARGET'\n",
     "    df['REGULATORY_COMPLIANCE'] = 'Y'\n",
     "    df['HAZARD_GROUP'] = 'HG1'\n",
-    "    df['CATCH_SOLUTION'] = '100%_ETHANOL'\n",
+    "    if v == 'v2':\n",
+    "        logging.info('auto-filling CATCH_SOLUTION and AMOUNT_OF_CATCH_PLATED for bioscan manifest v2')\n",
+    "        df['CATCH_SOLUTION'] = '100%_ETHANOL'\n",
+    "        df['AMOUNT_OF_CATCH_PLATED'] = 'ALL_SPECIMENS_PLATED'\n",
     "    # add contributors - delimiters checked in validate_contributors\n",
     "    contrib_series = contrib_df['FULL_NAME'] + ';' + \\\n",
     "        contrib_df['PRIMARY_AFFILIATION'] + ';' + \\\n",
     "        contrib_df['EMAIL ADDRESS'] + ';' + \\\n",
     "        contrib_df['CONTRIBUTION']\n",
     "    df['CONTRIBUTORS'] = '|'.join(list(contrib_series))\n",
+    "    \n",
+    "    if (df['MISC_METADATA'] != '').any():\n",
+    "        logging.warning('MISC_METADATA has some data filled in - note this column will be removed from output')\n",
     "    \n",
     "    return df\n",
     "\n",
