do not add time to date fields

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -41,6 +41,7 @@
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
+    "    df = fix_date_formats(df)\n",
     "    # validate series, exclude non-numeric\n",
     "    df = validate_series(df)\n",
     "    # clean up data\n",
