--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -33,6 +33,7 @@
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
+    "    df = fix_date_formats(df)\n",
     "    # check manifest verison\n",
     "    v = infer_bioscan_version(df)\n",
     "    # check series, exclude non-numeric\n",
@@ -157,31 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0820e7eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "blank_wells = {\n",
-    "    'PLATE_ONLY':('H12'), # v2\n",
-    "    'PLATE_ONLY_1_BLANK':('H12'), # v3\n",
-    "    'PLATE_ONLY_1_BLANK':('G12','H12'), # v3\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc8349a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['TUBE_OR_WELL_ID'].isin(blank_wells.keys()).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "120b09e7",
+   "id": "0761646b",
    "metadata": {},
    "outputs": [],
    "source": []
