--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "VALIDATION_VERSION = '0.2.0'\n",
     "ANOSPP_VERSION = '4.0'\n",
-    "BIOSCAN_VERSION = '2.0'"
+    "BIOSCAN_VERSION = '3.0'"
    ]
   },
   {
@@ -100,6 +100,24 @@
     "    return df\n",
     "\n",
     "# df = get_data(anospp_fn, sheet='TAB 3 TEST Metadata Entry')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_date_formats(df):\n",
+    "    # time can be appended to date by conversion to string\n",
+    "    # fixing date formats appearing due to string conversion on reading\n",
+    "    logging.debug('fixing date formats by removing appended times')\n",
+    "    \n",
+    "    for col in ['DATE_OF_COLLECTION', 'DATE_OF_PLATING', 'DATE_OF_PRESERVATION']:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = df[col].str.strip(' 00:00:00')\n",
+    "            \n",
+    "    return df"
    ]
   },
   {
@@ -368,9 +386,17 @@
     "    series = df[col]\n",
     "    series = exclude_missing(series, na_values)\n",
     "    \n",
+    "    # dates between 1900 and 2100 - unused\n",
+    "    date_regex = (r'^(19\\d\\d|20\\d\\d)-(0[1-9]|1[0-2])-(0[1-9]|[12]\\d|3[01])$|'\n",
+    "                  r'^(19\\d\\d|20\\d\\d)-(0[1-9]|1[0-2])$|'\n",
+    "                  r'^(19\\d\\d|20\\d\\d)$')\n",
+    "    \n",
+    "    numeric_regex = r'^[-+]?\\d*\\.?\\d+$'\n",
+    "    \n",
     "    regexs = {\n",
     "        'CATCH_LOT': (r'^C\\d{3}[A-Z]$', \n",
     "                      'like C123A'),\n",
+    "        'DATE_OF_COLLECTION':(date_regex, 'in YYYY-MM-DD format'),\n",
     "        'DECIMAL_LATITUDE': (r'^[-+]?([0-8]\\d|\\d)(\\.\\d+)?$', \n",
     "                             'between -90 and 90'),\n",
     "        'DECIMAL_LONGITUDE': (r'^[-+]?(1[0-7]\\d|\\d\\d|\\d)(\\.\\d+)?$', \n",
@@ -381,16 +407,15 @@
     "                              'in HH:MM format'),\n",
     "        'DURATION_OF_COLLECTION': (r'^P(?:\\d+Y)?(?:\\d+M)?(?:\\d+D)?(?:T(?:\\d+H)?(?:\\d+M)?(?:\\d+S)?)?$', \n",
     "                                   'in P[n]Y[n]M[n]DT[n]H[n]M[n]S format'),\n",
-    "        'ELEVATION': (r'^[-+]?\\d*\\.?\\d+$', 'only a number (in metres)'),\n",
-    "        'DNA_EXTRACT_VOLUME_PROVIDED': (r'^[-+]?\\d*\\.?\\d+$', 'a number (in microlitres)'),\n",
-    "        'DNA_EXTRACT_CONCENTRATION': (r'^[-+]?\\d*\\.?\\d+$', 'a number (in nanograms per microlitre)')\n",
+    "        'DATE_OF_PLATING':(date_regex, 'in YYYY-MM-DD format'),\n",
+    "        'ELEVATION': (numeric_regex, 'only a number (in metres)'),\n",
+    "        'DNA_EXTRACT_VOLUME_PROVIDED': (numeric_regex, 'a number (in microlitres)'),\n",
+    "        'DNA_EXTRACT_CONCENTRATION': (numeric_regex, 'a number (in nanograms per microlitre)')\n",
     "    }\n",
-    "    \n",
-    "\n",
     "    \n",
     "    is_valid_regex = series.str.match(regexs[col][0])\n",
     "    if not is_valid_regex.all():\n",
-    "        offending_values = series[~is_valid_regex].unique()\n",
+    "        offending_values = list(series[~is_valid_regex].unique())\n",
     "        s = index_ranges(series[~is_valid_regex])\n",
     "        msg = (f'{col} format incorrect for SERIES {s}: found {offending_values} - '\n",
     "              f'expected to be {regexs[col][1]}')\n",
@@ -529,10 +554,10 @@
     "                for blank_well in blank_wells[plate_only_val]:\n",
     "                    for col in pdf.columns:\n",
     "                        if col == 'ORGANISM_PART':\n",
-    "                            pdf.query(f'{well_col} == \"{blank_well}\"')[col] = 'NOT_APPLICABLE'\n",
+    "                            pdf.loc[pdf[well_col] == blank_well, col] = 'NOT_APPLICABLE'\n",
     "                        elif col not in ['SERIES','CATCH_LOT','RACK_OR_PLATE_ID',\n",
     "                                         'TUBE_OR_WELL_ID','ORGANISM_PART','PRESERVATIVE_SOLUTION']:\n",
-    "                            pdf.query(f'{well_col} == \"{blank_well}\"')[col] = ''\n",
+    "                            pdf.loc[pdf[well_col] == blank_well, col] = ''\n",
     "            pdfs.append(pdf)\n",
     "            \n",
     "        df = pd.concat(pdfs).reset_index(drop=True)\n",
@@ -660,12 +685,12 @@
     "    if col not in df.columns:\n",
     "        logging.error(f'{col} column not found in manifest')\n",
     "        return\n",
-    "    series = df[col]\n",
+    "    series = df[col].copy()\n",
     "    series = exclude_missing(series, na_values)\n",
     "    \n",
     "    # invalid date formats\n",
     "    # empty string converted to NaT\n",
-    "    date_series = pd.to_datetime(series, format='%Y-%m-%d', errors='coerce')\n",
+    "    date_series = pd.to_datetime(series, format='%Y-%m-%d', errors='coerce').copy()\n",
     "    if date_series.isna().any():\n",
     "        logging.error(f'invalid date format in {col} column, SERIES {index_ranges(date_series[date_series.isna()])}: '\n",
     "                      f'{series[date_series.isna()].unique()} - expected YYYY-MM-DD format')\n",
@@ -1109,6 +1134,8 @@
    "source": [
     "def add_sts_cols(df, contrib_df, gal, v, bioscan=True):\n",
     "    \n",
+    "    logging.debug('adding STS columns to manifest')\n",
+    "    \n",
     "    is_blank = (df['ORGANISM_PART'] == 'NOT_APPLICABLE')\n",
     "    \n",
     "    df['SPECIMEN_ID'] = df['RACK_OR_PLATE_ID'] + '_' + df['TUBE_OR_WELL_ID']\n",
@@ -1151,8 +1178,8 @@
     "def write_sts_manifest(df, input_fn, validation_version):\n",
     "    \n",
     "    output_fn = input_fn.rstrip('.xlsx') + '_' + validation_version + '_for_sts.xlsx'\n",
-    "    \n",
-    "    logging.info(f'writing STS manifest to {output_fn}')\n",
+    "        \n",
+    "    logging.info(f'writing STS manifest to \"{output_fn}\"')\n",
     "    \n",
     "    df.to_excel(output_fn, sheet_name='Metadata Entry')\n",
     "    "
