column drops for sts

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "    logging.info(f'# partner manifest validation v.{VALIDATION_VERSION}')\n",
     "    logging.info(f'# validating BIOSCAN manifest v.{BIOSCAN_VERSION}')\n",
-    "    logging.info(f'# manifest {fn}')\n",
+    "    logging.info(f'# manifest \"{fn}\"')\n",
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0761646b",
+   "id": "9c9457a5",
    "metadata": {},
    "outputs": [],
    "source": []
