--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "def get_data(fn, sheet='TAB 2 Metadata Entry'):\n",
     "\n",
-    "    logging.debug(f'reading sample metadata from \"{fn}\" sheet \"{sheet}\"')\n",
+    "    logging.debug(f'reading data from \"{fn}\" sheet \"{sheet}\"')\n",
     "    \n",
     "    df = pd.read_excel(fn, dtype=str, index_col=0, keep_default_na=False,\n",
     "                       sheet_name=sheet)\n",
@@ -1151,9 +1151,15 @@
     "    df['REGULATORY_COMPLIANCE'] = 'Y'\n",
     "    df['HAZARD_GROUP'] = 'HG1'\n",
     "    if v == 'v2':\n",
-    "        logging.info('auto-filling CATCH_SOLUTION and AMOUNT_OF_CATCH_PLATED for bioscan manifest v2')\n",
+    "        logging.info('auto-filling CATCH_SOLUTION and AMOUNT_OF_CATCH_PLATED columns for bioscan manifest v2')\n",
     "        df['CATCH_SOLUTION'] = '100%_ETHANOL'\n",
     "        df['AMOUNT_OF_CATCH_PLATED'] = 'ALL_SPECIMENS_PLATED'\n",
+    "        logging.info('dropping IDENTIFIER_AFFILIATION column for bioscan manifest v2')\n",
+    "        if (df['IDENTIFIER_AFFILIATION'] != '').any():\n",
+    "            logging.warning('IDENTIFIER_AFFILIATION has some data filled in - '\n",
+    "                            'note this column will be removed from output')\n",
+    "        logging.info('dropping IDENTIFIER_AFFILIATION column for bioscan manifest v2')\n",
+    "        df = df.drop(columns=['IDENTIFIER_AFFILIATION'])\n",
     "    # add contributors - delimiters checked in validate_contributors\n",
     "    contrib_series = contrib_df['FULL_NAME'] + ';' + \\\n",
     "        contrib_df['PRIMARY_AFFILIATION'] + ';' + \\\n",
@@ -1161,8 +1167,10 @@
     "        contrib_df['CONTRIBUTION']\n",
     "    df['CONTRIBUTORS'] = '|'.join(list(contrib_series))\n",
     "    \n",
+    "    logging.info('dropping MISC_METADATA column')\n",
     "    if (df['MISC_METADATA'] != '').any():\n",
     "        logging.warning('MISC_METADATA has some data filled in - note this column will be removed from output')\n",
+    "    df = df.drop(columns=['MISC_METADATA'])\n",
     "    \n",
     "    return df\n",
     "\n",
