--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "    logging.warning(f'# partner manifest validation v.{VALIDATION_VERSION}')\n",
     "    logging.warning(f'# validating ANOSPP manifest v.{ANOSPP_VERSION}')\n",
-    "    logging.warning(f'# manifest {fn}')\n",
+    "    logging.warning(f'# manifest \"{fn}\"')\n",
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
