blank exemptions for other/misc info

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -601,7 +601,8 @@
     "        \n",
     "    for col in df.columns:\n",
     "        if col not in ['SERIES','CATCH_LOT','RACK_OR_PLATE_ID',\n",
-    "                                     'TUBE_OR_WELL_ID','ORGANISM_PART','PRESERVATIVE_SOLUTION']:\n",
+    "                       'TUBE_OR_WELL_ID','ORGANISM_PART','PRESERVATIVE_SOLUTION',\n",
+    "                       'OTHER_INFORMATION','MISC_METADATA']:\n",
     "            excessive_blank_info_df = blank_df[blank_df[col] != '']\n",
     "            if excessive_blank_info_df.shape[0] > 0:\n",
     "                logging.error(f'{col} column values non-empty for blank samples '\n",
