anospp header-footer to info

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -35,9 +35,9 @@
     "\n",
     "    setup_logging(verbose=verbose)\n",
     "\n",
-    "    logging.warning(f'# partner manifest validation v.{VALIDATION_VERSION}')\n",
-    "    logging.warning(f'# validating ANOSPP manifest v.{ANOSPP_VERSION}')\n",
-    "    logging.warning(f'# manifest \"{fn}\"')\n",
+    "    logging.info(f'# partner manifest validation v.{VALIDATION_VERSION}')\n",
+    "    logging.info(f'# validating ANOSPP manifest v.{ANOSPP_VERSION}')\n",
+    "    logging.info(f'# manifest \"{fn}\"')\n",
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
@@ -109,7 +109,7 @@
     "    validate_regex('DNA_EXTRACT_VOLUME_PROVIDED', df, na_values=[''])\n",
     "    validate_regex('DNA_EXTRACT_CONCENTRATION', df, na_values=[''])\n",
     "            \n",
-    "    logging.warning('# ended validate_anospp_partner_manifest_v.{}'.format(ANOSPP_VERSION))\n",
+    "    logging.info('# ended validate_anospp_partner_manifest_v.{}'.format(ANOSPP_VERSION))\n",
     "\n",
     "    # TODO yield table ready for STS submission\n",
     "    return df\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ff01236",
+   "id": "f526ee2d",
    "metadata": {},
    "outputs": [],
    "source": []
